# solana-rust-token-mint

./: README.md  package.json
src/client/: main.ts  token.ts  utils.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs
